--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ ul {
 #wrapper {
   text-align: center;
   display: flex;
+  gap: 0 25px;
   flex-wrap: wrap;
   max-width: min(1000px, 90%);
   margin: 0 auto;
@@ -123,6 +124,7 @@ ul {
   position: absolute;
   inset: 0;
   box-shadow: inset 0 0 9px 7px white;
+  pointer-events: none;
 }
 
 #statList>li {
@@ -139,8 +141,8 @@ ul {
 
 }
 
-#statList stat {
-  text-align: left;
+#statList>li:nth-child(odd)>stat,
+#statList>li:nth-child(even)>value {
   font-weight: bold;
 }
 
