--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,33 @@ ul {
   width: 100%;
 }
 
+#explorer>header {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0 10px;
+  align-items: center;
+}
+
+#explorer h2 {
+  width: 100%;
+  margin: 0;
+}
+
+#projectFolderName {
+  margin: 10px 0 10px 40px;
+}
+
+#explorer>header>button {
+  width: 32px;
+  height: 32px;
+  padding: 2px;
+}
+
+#explorer>header>button img {
+  width: 100%;
+}
+
 #explorer ul {
   display: inline-flex;
   flex-direction: column;
@@ -131,7 +158,7 @@ ul {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  background: linear-gradient(transparent,pink, transparent);
+  background: linear-gradient(transparent, pink, transparent);
   padding: 8px 15px;
   margin: -14px 0;
 }
@@ -158,4 +185,56 @@ ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+glass>label {
+  position: absolute;
+  inset: 0;
+  background: #5553;
+  z-index: 0;
+}
+
+:checked~glass {
+  display: flex;
+  position: absolute;
+  inset: 0;
+  justify-content: center;
+  align-items: center;
+}
+
+modal {
+  z-index: 1;
+  border-radius: 20px;
+  background: white;
+  padding: 40px;
+  max-width: 80%;
+  max-height: 80%;
+  box-sizing: border-box;
+}
+
+modal :is(h2, h3, h4) {
+  text-align: center;
+}
+
+[value="itemsToHide"]:checked~glass>#itemsToHideModal {
+  display: flex;
+}
+
+#itemsToHideModal {
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+
+#itemsToHideForm {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+#itemsToHideForm>label {
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
